<resources>
    <string name="app_name">GPS Camera - Map &amp; Geo Tagging</string>
    <string name="gps_camera_non_translatable" translatable="false">GPS Camera</string>
    <string name="add_note">Add Note</string>
    <string name="add_custom_name">Add Custom Name</string>
    <string name="date_and_time">Date and time</string>
    <string name="day">Day</string>
    <string name="hour_minute_second">Hour minute second</string>
    <string name="_24_hours">24 Hours</string>
    <string name="decimal">Decimal</string>
    <string name="dms">DMS</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
    <string name="line_4">Line 4</string>
    <string name="file_name">File Name</string>
    <string name="select_folder">Select Folder</string>
    <string name="save_original_photos">Save original photos</string>
    <string name="default_">Default</string>
    <string name="site_1">Site 1</string>
    <string name="site_2">Site 2</string>
    <string name="template">Template</string>
    <string name="environment">Environment</string>
    <string name="camera_level">Camera level</string>
    <string name="focus">Focus</string>
    <string name="templates">Templates</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="quick_share">Quick Share</string>
    <string name="_2x" translatable="false">2x</string>
    <string name="_1x" translatable="false">1x</string>
    <string name="white">White</string>
    <string name="volume">Volume</string>
    <string name="mirror">Mirror</string>
    <string name="timer_off">Timer Off</string>
    <string name="grid">Grid</string>
    <string name="ratio">Ratio</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="add">Add</string>
    <string name="custom_name_1">Custom name 1</string>
    <string name="custom_name_2">Custom name 2</string>
    <string name="custom_name_3">Custom name 3</string>
    <string name="full_address">Full Address</string>
    <string name="latitude_longitude">Latitude/longitude</string>
    <string name="plus_code">Plus code</string>
    <string name="time_zone">Time zone</string>
    <string name="to_provide_you_with_the_best_learning_experience_we_need_access_to_the_following_features">To provide you with the best learning experience, we need access to the following features:</string>
    <string name="permissions">Permissions</string>
    <string name="take_photos_for_visual_translations_and_practice">Take photos for visual translations and practice</string>
    <string name="camera">Camera</string>
    <string name="allow">Allow</string>
    <string name="location">Location</string>
    <string name="learn_location_specific_phrases_and_vocabulary">Learn location-specific phrases and vocabulary</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="upload_images_for_translations_and_customization">Upload images for translations and customization</string>
    <string name="continue_">Continue</string>
    <string name="you_can_change_these_permissions_later_in_your_device_settings">You can change these permissions later in your device settings</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">"Permission Denied "</string>
    <string name="please_enter_folder_name">Please enter folder name</string>
    <string name="failed_to_create_folder">Failed to create folder!</string>
    <string name="please_enter_sequence_number">Please Enter Sequence Number</string>
    <string name="please_enter_custom_name">Please Enter Custom Name</string>
    <string name="allowed">Allowed</string>
    <string-array name="aspect_ratios" translatable="false">
        <item>4:3</item>
        <item>16:9</item>
    </string-array>
    <string-array name="grid_options" translatable="false">
        <item>Off</item>
        <item>2x2</item>
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
    </string-array>
    <string name="basic">Basic</string>
    <string name="stamp">Stamp</string>
    <string name="weather">Weather</string>
    <string name="technical">Technical</string>
    <string name="advance_template">Advance Template</string>
    <string name="classic_template">Classic Template</string>
    <string name="reporting_template">Reporting Template</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reporting_tag">Reporting Tag</string>
    <string name="date_time"><![CDATA[Date & time]]></string>
    <string name="map_type">Map type</string>
    <string name="short_address">Short address</string>
    <string name="lat_long">Lat/long</string>
    <string name="person_name">Person name</string>
    <string name="contact_number">Contact number</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="compass">Compass</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="altitude">Altitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="sound_level">Sound Level</string>
    <string name="numbering">Numbering</string>
    <string name="logo">Logo</string>
    <string name="note">Note</string>
    <string name="stamp_settings">Stamp Settings</string>
    <string name="font_style">Font Style</string>
    <string name="stamp_color">Stamp Color</string>
    <string name="stamp_size">Stamp Size</string>
    <string name="stamp_position">Stamp Position</string>
    <string name="map_position">Map Position</string>
    <string name="map_scale">Map Scale</string>
    <string name="weather_information">Weather Information</string>
    <string name="technical_details">Technical Details</string>
    <string name="basic_information">Basic Information</string>
    <string name="additional_details">Additional Details</string>
    <string name="title">Title</string>
    <string name="enter_here">Enter Here</string>
    <string name="recent_added_reporting_tag">Recent added reporting tag</string>
    <string name="please_enter_tag">Please enter tag</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="add_number">Add Number</string>
    <string name="this_number_will_be_used_for_verification_and_communication">This number will be used for verification and communication.</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="please_enter_a_phone_number_including_country_code">Please enter a phone number including country code</string>
    <string name="please_enter_valid_number">Please enter valid number</string>
    <string name="please_add_number_first">Please add number first</string>
    <string name="show_note_options_on_capture">Show note options on capture</string>
    <string name="recent_added_note">Recent added note</string>
    <string name="prefix">Prefix</string>
    <string name="enter_prefix">Enter prefix</string>
    <string name="suffix">Suffix</string>
    <string name="enter_suffix">Enter suffix</string>
    <string name="sequence_number">Sequence Number</string>
    <string name="sequence_type">Sequence Type</string>
    <string name="reset">Reset</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="extra_small">Extra Small</string>
    <string name="capture_beyond_photos">Capture Beyond Photos</string>
    <string name="stamp_it_save_it_share_it">Stamp It, Save It, Share It</string>
    <string name="your_camera_your_way">Your Camera, Your Way</string>
    <string name="shoot_like_a_pro">Shoot Like a Pro</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="apply">Apply</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="app_language">App Language</string>
    <string name="image_quality">Image Quality</string>
    <string name="volume_button">Volume button</string>
    <string name="touch_settings">Touch Settings</string>
    <string name="features">Features</string>
    <string name="watermark">Watermark</string>
    <string name="qr_detection">QR detection</string>
    <string name="location_share_mode">Location share mode</string>
    <string name="front_rear_camera_stamp">Front/rear camera stamp</string>
    <string name="about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="which_camera_mode_do_you_use_the_most">Which camera mode do you use the most?</string>
    <string name="high_quality_still_images">High quality still images</string>
    <string name="hd_and_4k_video_recording">HD and 4K video recording</string>
    <string name="instant_capture_and_share">Instant capture and share</string>
    <string name="choose_your_default_photo_ratio">Choose your default photo ratio</string>
    <string name="_16_9_wide">16:9 (Wide)</string>
    <string name="perfect_for_videos_and_cinematic_photos">Perfect for videos and cinematic photos</string>
    <string name="_16_9_preview">16:9 Preview</string>
    <string name="_4_3_preview">4:3 Preview</string>
    <string name="_4_3_standard">4:3 (Standard)</string>
    <string name="classic_photo_format_for_most_cameras">Classic photo format for most cameras</string>
    <string name="how_do_you_prefer_to_tag_your_location">How do you prefer to tag your location?</string>
    <string name="gps_automatic">GPS (automatic)</string>
    <string name="use_your_device_s_location_to_automatically_tag_photos">Use your device\'s location to automatically tag photos</string>
    <string name="manual_entry">Manual entry</string>
    <string name="type_in_your_location_when_saving_photos">Type in your location when saving photos</string>
    <string name="do_not_tag">Do not tag</string>
    <string name="no_location_information_will_be_added_to_photos">No location information will be added to photos</string>
    <string name="classic">Classic</string>
    <string name="modern">Modern</string>
    <string name="minimal">Minimal</string>
    <string name="vintage">Vintage</string>
    <string name="bold">Bold</string>
        <string name="do_you_really_want_to_exit">Do you really want to exit ?</string>
        <string name="before_you_go_explore_these_amazing_features">Before you go, explore these amazing features!</string>
        <string name="continue_using_app">Continue Using App</string>
        <string name="exit_app">Exit App</string>
        <string name="enjoying_the_app">Enjoying the app?</string>
        <string name="your_feedback_helps_us_improve">Your feedback helps us improve!</string>
        <string name="rate_on_play_store">Rate on Play Store</string>
        <string name="maybe_later">Maybe Later</string>
        <string name="we_d_love_to_know_how_we_can_improve">We\'d love to know how we can improve</string>
        <string name="your_feedback_is_valuable_to_us">Your feedback is valuable to us</string>
        <string name="tell_us_what_we_can_do_better">Tell us what we can do better...</string>
        <string name="submit">Submit</string>
        <string name="cancel">Cancel</string>
</resources>